# esp32s3-dsp

./: .gitignore  CMakeLists.txt  README.md  sdkconfig
components/mathlib_s3/: CMakeLists.txt  Kconfig.projbuild  addVectors_q15_pie.S  arg_16_q15_pie.S  complexMult_q15_pie.S  complex_s3.c  copy_pie.S  cordic_q15.S  cordic_q15.c  dot_product2_q15_pie.S  dot_product_q15_pie.S  fir_16_16_q15_pie.S  fir_q15_pe.S  magnitude_q15_pie.S  mathlib_s3.c  normalize_q15_pie.S  scaleVector_q15_pie.S  scaleVectors_q15_pie.S
components/mathlib_s3/include/: complex_s3.h  mathlib_s3.h
main/: CMakeLists.txt  main.cpp  test.h  test_complex.cpp  test_copy.cpp  test_dotproduct.cpp  test_fir.cpp  test_scaleVectors.cpp
patch/: esp32s3-builtin.cfg
