idf_component_register(SRCS "normalize_q15_pie.S" 
                    "magnitude_q15_pie.S" 
                    "addVectors_q15_pie.S" 
                    "dot_product_q15_pie.S" 
                    "scaleVector_q15_pie.S" 
                    "copy_pie.S"
                    "mathlib_s3.c"
                    INCLUDE_DIRS "include")
